# learning-rust

./: .gitignore
der_quiz/: Cargo.toml  Program0.enc  Program1.enc  readme.md
der_quiz/src/: aes_cipher.rs  lib.rs  main.rs  parser.rs
discrete_logarithm_problem/: Cargo.toml  cp_2_input.csv  cp_2_output.csv
discrete_logarithm_problem/latex report/: .gitignore  main.tex
discrete_logarithm_problem/latex report/chapters/: main_part.tex  title.tex
discrete_logarithm_problem/src/: chain_fraction.rs  dlp_algorithms.rs  dlp_solver.rs  factor_algorithms.rs  factor_base.rs  factorize.rs  lib.rs
examples/importing_local_rust_bigint/: Cargo.toml
examples/importing_local_rust_bigint/src/: main.rs
factorization/: Cargo.toml
factorization/latex report/: main.cls  main.tex
factorization/latex report/chapters/: main_part.tex  title.tex
factorization/src/: chain_fraction.rs  factor_algorithms.rs  factor_base.rs  factorize.rs  lib.rs  matrix.rs  vector.rs
rust-bigint/: Cargo.toml  README.md
rust-bigint/src/: bigint.rs  biguint.rs  helpers.rs  lib.rs
rust-bigint/src/bigint/: addition.rs  conversion.rs  division.rs  helpers.rs  multiplication.rs  shift.rs  subtraction.rs
rust-bigint/src/biguint/: addition.rs  conversion.rs  division.rs  helpers.rs  multiplication.rs  shift.rs  subtraction.rs
rust-bigint/tests/: integration_tests.rs
turing_machine/: Cargo.toml
turing_machine/src/: main.rs  turing_machine.rs
